Fix News margin-top on mobile

--- a/style.css
+++ b/style.css
@@ -223,6 +223,9 @@ hr {
             grid-gap: 20px;
             /* margin-bottom: -60px; */
         }
+        #spacer {
+            margin-top: -60px;
+        }
     }
 }
 
